--- a/package.json
+++ b/package.json
@@ -12,9 +12,17 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/material": "^7.3.2",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/material": "^7.3.5",
+    "@mui/styled-engine-sc": "^7.3.3",
+    "@mui/x-date-pickers": "^8.16.0",
+    "@mui/x-date-pickers-pro": "^8.16.0",
     "@react-pdf/renderer": "^4.3.1",
     "@tailwindcss/vite": "^4.1.13",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.19",
+    "file-saver": "^2.0.5",
+    "firebase": "^12.5.0",
     "flatpickr": "^4.6.13",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
@@ -23,8 +31,11 @@
     "react-flatpickr": "^4.0.11",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.28.0",
+    "react-toastify": "^11.0.5",
+    "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.13",
-    "to-words": "^4.7.0"
+    "to-words": "^4.7.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
