--- a/.nixpacks.toml
+++ b/.nixpacks.toml
@@ -1,8 +1,10 @@
+providers = ["node"]
+ 
 [variables]
 NODE_VERSION = "20"
-
+ 
 [phases.build]
-cmds = ["npm run build"]
-
+cmds = ["npm install", "npm run build"]
+ 
 [start]
 cmd = "npm run preview"
